--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,14 @@ server {
 
     # Configure API proxy to backend
     location /api/ {
-        proxy_pass http://backend:8001/;
+        # Use environment variable for backend URL or default to a Cloud Run service URL
+        # This will be configured during deployment
+        set $backend_url "https://customermonitor-backend-service-url";
+        if ($http_x_backend_url) {
+            set $backend_url $http_x_backend_url;
+        }
+        
+        proxy_pass $backend_url;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
