Fix Cloud Run deployment: Add explicit entrypoint script, update nginx config, and improve Cloud Run settings

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,7 +11,7 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'customerstatusmonitor-fe'
+      - 'customermonitor-fe'
       - '--image'
       - 'gcr.io/$PROJECT_ID/customerstatusmonitor-fe:$COMMIT_SHA'
       - '--region'
@@ -19,5 +19,19 @@ steps:
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
+      - '--port'
+      - '8080'
+      - '--set-env-vars'
+      - 'PORT=8080'
+      - '--timeout'
+      - '300s'
+      - '--cpu'
+      - '1'
+      - '--memory'
+      - '512Mi'
+      - '--min-instances'
+      - '0'
+      - '--max-instances'
+      - '10'
 images:
   - 'gcr.io/$PROJECT_ID/customerstatusmonitor-fe:$COMMIT_SHA'
