--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80;
+    listen 8080;
     server_name _;
     
     root /usr/share/nginx/html;
@@ -10,19 +10,13 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Configure API proxy to backend
-    location /api/ {
-        # Use environment variable for backend URL or default to a Cloud Run service URL
-        # This will be configured during deployment
-        set $backend_url "https://customermonitor-backend-service-url";
-        if ($http_x_backend_url) {
-            set $backend_url $http_x_backend_url;
-        }
-        
-        proxy_pass $backend_url;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    # Configure API proxy to backend - commented out for initial deployment
+    # Will be configured properly once frontend is working
+    #location /api/ {
+    #    proxy_pass https://customermonitor-backend-service-url;
+    #    proxy_set_header Host $host;
+    #    proxy_set_header X-Real-IP $remote_addr;
+    #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #    proxy_set_header X-Forwarded-Proto $scheme;
+    #}
 }
