--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.5",
     "core-js": "^3.8.3",
+    "firebase": "^11.7.3",
     "vue": "^3.2.13",
     "vue-router": "^4.5.1"
   },
